--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
-/* font styles */
+/*--------------------
+   font styles 
+----------------------*/
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 
-/* common font styles*/
+/*--------------------
+ common font styles
+ ---------------------*/
+header{
+    background-color: #562EFF;
+}
 body {
     font-family: 'Poppins', sans-serif;
     background-color: #F3F1FF;
@@ -27,6 +34,29 @@ hr {
 
 }
 
+/*-------------------
+   navbar styles 
+--------------------*/
+.nav-container{
+    display: flex;
+    margin: 0 auto;
+    align-items: center;
+    justify-content: space-between;
+    width: 870px;
+    margin-bottom: 20px;
+}
+.nav-container img{
+    width: 40px;
+    height: 51px;
+}
+.nav-item{
+    display: flex;
+    /* gap: 36px; */
+    align-items: center;
+}
+.nav-item li{
+    list-style: none;
+}
 /*---------------------
 top players styles 
 ----------------------*/
@@ -138,15 +168,24 @@ Top Blog Section Styles
     .container{
         width: 100%;
     }
-    .players, .blogs{
-        grid-template-columns: repeat(1, 1fr);
-    }
-    .player, .blog, .course{
+    .nav-container{
+        align-items: flex-start;
+        width: 100%;
         flex-direction: column;
-        align-items: center;
+        gap: 10px;
+        padding: 10px 20px;
     }
+    .players, 
+    .blogs, 
     .courses{
-        justify-items: center;
         grid-template-columns: repeat(1, 1fr);
+        justify-items: center;
+        grid-column-gap: 10px;
+    }
+    .player, .blog, .nav-item{
+        flex-direction: column;
+    }
+    .hide{
+        display: none;
     }
  }
